fix horizontal scroll

--- a/styles/sass/_mediaquery.scss
+++ b/styles/sass/_mediaquery.scss
@@ -24,7 +24,6 @@
 @media (max-width: 820px) {
   .wrapper {
     width: 95%;
-    overflow-x: hidden;
   }
   .logo {
     h1 {
@@ -54,9 +53,11 @@
 @media (max-width: 480px) {
   .wrapper {
     width: 98%;
-    overflow-x: hidden;
   }
   .logo {
+    img {
+      width: 90%;
+    }
     h1 {
       font-size: 4rem;
       margin-top: 10%;
