--- a/styles/style.css
+++ b/styles/style.css
@@ -560,7 +560,6 @@ input[name="reset"]:hover {
 @media (max-width: 820px) {
   .wrapper {
     width: 95%;
-    overflow-x: hidden;
   }
   .logo h1 {
     font-size: 5.5rem;
@@ -584,7 +583,9 @@ input[name="reset"]:hover {
 @media (max-width: 480px) {
   .wrapper {
     width: 98%;
-    overflow-x: hidden;
+  }
+  .logo img {
+    width: 90%;
   }
   .logo h1 {
     font-size: 4rem;
